Updated to prevent horizontal scrolling on mobile, and added more padding to pdf

--- a/src/scss/pages/funding/_funding.scss
+++ b/src/scss/pages/funding/_funding.scss
@@ -34,7 +34,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  padding-top: 10px;
+  padding-top: 30px;
   padding-bottom: -50px;
   height: auto;
 }
